client/src/components/Card/Card.css
.card {
  box-sizing: border-box;
  border-radius: 8px;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
  max-width: 300px;
  min-width: 300px;
  padding: 8px;
  margin: 8px 0px;
  background-color: white;
  cursor: pointer;
}

.card:focus {
  outline: none;
}

.card-title {
  text-align: center;
  width: 100%;
  padding: 0px;
  font-size: 16px;
}

.card-body {
  height: 100px;
  overflow: hidden;
}

